# literalext

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: internal.rs  lib.rs  test.rs
