[package]
name = "literalext"
version = "0.2.0"
authors = ["Nika Layzell <nika@thelayzells.com>"]
repository = "https://github.com/mystor/literalext"
description = "A helper crate for interpreting proc-macro `Literal` values"
license = "MIT/Apache-2.0"

[features]
default = ["proc-macro2"]
i128 = []
proc-macro = []
dummy = []
# proc-macro2 is implicit

[dependencies]
proc-macro2 = { version = "0.2", optional = true }
